--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Repositorio Acústico{% endblock %}</title>
+    <title>{% block title %}Repositorio de Acústica{% endblock %}</title>
 
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    
     <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
 
 <style>
@@ -29,7 +31,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Repositorio Acústico</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">Repositorio de Acústica</a>
       </div>
     </nav>
 
