Menu de seleccion desplegable

--- a/templates/add_aula.html
+++ b/templates/add_aula.html
@@ -10,7 +10,16 @@
 
     <div class="mb-3">
       <label for="edificio" class="form-label">Edificio/Sector:</label>
-      <input type="text" name="edificio" id="edificio" class="form-control" required>
+      <select name="edificio" id="edificio" class="form-select" required>
+        <option value="" disabled selected>Selecciona un edificio...</option>
+
+        <option value="Senescyt">Senescyt</option>
+        <option value="Ingenio">Ingenio</option>
+        <option value="Biblioteca">Biblioteca</option>
+        <option value="Caballerizas">Caballerizas</option>
+        <option value="Innopolis">Innopolis</option>
+        <option value="Jardín Botánico">Jardín Botánico</option>
+      </select>
     </div>
 
     <div class="mb-3">
